--- a/src/main/resources/static/css/inmuebleList.css
+++ b/src/main/resources/static/css/inmuebleList.css
@@ -1,3 +1,6 @@
+html {
+    height: fit-content
+}
 body {
     height: 100%;
     box-sizing: border-box;
@@ -6,8 +9,24 @@ body {
 }
 
 main {
-    height: 100%;  
+    height: 100%; 
 }
+
+.titulo-sin-contenido {
+    text-align: center;
+}
+
+.titulo-sin-contenido p {
+    color: #168AAD;
+    width: 85vw;
+    height: 100vh;
+    font-size: 1.5em;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .card {
     border-radius: 0.7em;
 }
@@ -70,9 +89,7 @@ main {
 }
 
 @media screen and (min-width: 768px) {
-    main {
-        height: 100%;
-    }
+    
 }
 
 @media screen and (max-width: 575px) {
@@ -93,4 +110,12 @@ main {
         left: 72%;
     }
 }
-    
+
+@media screen and (min-height: 1024px) {
+    html {
+        height: 100%;
+    }
+    main {
+        height: auto;
+    }
+}
