--- a/src/main/resources/templates/inmuebleList.html
+++ b/src/main/resources/templates/inmuebleList.html
@@ -16,8 +16,11 @@
 
         <main>
             <div class="container my-4">
+                
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-3">
-
+                    <div class="titulo-sin-contenido" th:if="${inmuebles.size() == 0}">
+                        <p>No hay inmuebles en esta categoria</p> 
+                    </div>
                     <div class="col" th:each="inmueble : ${inmuebles}">
                         <div class="card shadow-sm">
                             <div class="card-body">                                                    
@@ -75,7 +78,7 @@
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
                                         <a th:href="@{/inmueble/detalle/__${inmueble.id}__}" class="btn btn-sm btn-outline-secondary">Ver Detalles</a>
-                                        <a th:if="${(#authorization.expression('isAuthenticated()') and inmueble.usuarioEnte.id == session?.usuariosession?.id)}" th:href="@{/oferta/inmueble/__${inmueble.id}__}" class="btn btn-sm btn-outline-secondary">Ver Ofertas</a>
+                                        <a th:if="${(#authorization.expression('isAuthenticated()') and inmueble.usuarioPropietario.id == session?.usuariosession?.id)}" th:href="@{/oferta/inmueble/__${inmueble.id}__}" class="btn btn-sm btn-outline-secondary">Ver Ofertas</a>
                                     </div>
                                     
                                 </div>
