--- a/src/main/resources/templates/inmuebleListAdm.html
+++ b/src/main/resources/templates/inmuebleListAdm.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>MrHouse</title>
+        <title>MrHouse - ADM</title>
         <link rel="stylesheet" href="./css/main.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,8 +23,8 @@
                         <th scope="col">Superficie</th>
                         <th scope="col">Ambientes</th>
                         <th scope="col">Precio</th>
-                        <th scope="col" sec:authorize="hasRole('ADMIN')">Modificar</th>
-                        <th scope="col" sec:authorize="hasRole('ADMIN')">Eliminar</th>
+                        <th scope="col" sec:authorize="hasRole('ADMIN')"></th>
+                        <th scope="col" sec:authorize="hasRole('ADMIN')"></th>
                     </tr>
                 </thead>
                   <tbody th:each="inmueble : ${inmuebles}"> 
@@ -38,11 +38,11 @@
                        <td th:if="${inmueble.tipoOferta == 'alquiler'}" th:text="${inmueble.precioAlquiler}"></td>
                        <td th:if="${inmueble.tipoOferta == 'venta'}" th:text="${inmueble.precioVenta}"></td>
                         <td  >
-                          <a sec:authorize="hasRole ('ADMIN')" th:href="@{/inmueble/modificar/__${inmueble.id}__}" class="btn btn-sm btn btn-secondary">Modificar</a> 
+                          <a sec:authorize="hasRole ('ADMIN')" th:href="@{/inmueble/modificar/__${inmueble.id}__}" class="btn btn-sm btn-outline-secondary">Modificar</a> 
+                           <a sec:authorize="hasRole ('ADMIN')" th:href="@{/inmueble/eliminar/__${inmueble.id}__}" class="btn btn-sm btn-outline-secondary">Eliminar</a>  
                         </td>
-                        <td>
-                           <a sec:authorize="hasRole ('ADMIN')" th:href="@{/inmueble/eliminar/__${inmueble.id}__}" class="btn btn-sm btn btn-danger">Eliminar</a>    
-                        </td>
+                         
+
                     </tr>
 
                 </tbody>
