--- a/src/main/resources/templates/panel.html
+++ b/src/main/resources/templates/panel.html
@@ -3,18 +3,30 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MrHouse</title>
+    <title>Panel Administrador</title>
     <link rel="stylesheet" href="./css/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/panel.css">
 </head>
 <body>
 
 <nav th:replace="./fragment/navbar :: nav"></nav>
 
-<div class="container m-5">
+<div class="container m-5" style="height: 100%;">
+
+    <div class="caja-mh">
+        <a class="navbar-brand" th:href="@{/}">
+            <span id="span-mh" class="fw-bold"  style="color: #1A759F;"> MrHouse </span> 
+        </a>
+    </div>
+    <div class="contenedorBienvenida">
+        
+        <p class="bienvenidaMensaje">Bienvenido al Modo ADMIN!</p>
+
+    </div>
 
     <section class="py-8 text-center container">
         <div class="row py-lg-5">
