--- a/src/main/resources/templates/busquedaAlquiler.html
+++ b/src/main/resources/templates/busquedaAlquiler.html
@@ -52,7 +52,7 @@
                             class="form-control"
                             id="ambientes"
                             name="ambientes"
-                            placeholder="Cantidad de ambientes"
+                            placeholder="Cant. de ambientes"
                             />
                     </div>
 
@@ -63,7 +63,7 @@
                             class="form-control"
                             id="precio"
                             name="precioM"
-                            placeholder="Ingrese el precio"              
+                            placeholder="Precio Mínimo"              
                             />
                     </div>
 
@@ -74,7 +74,7 @@
                             class="form-control"
                             id="precio"
                             name="precio"
-                            placeholder="Ingrese el precio"              
+                            placeholder="Precio Máximo"              
                             />
                     </div>
 
