--- a/src/main/resources/static/css/inmuebleForm.css
+++ b/src/main/resources/static/css/inmuebleForm.css
@@ -325,7 +325,7 @@ input[type="radio"]:checked {
     backdrop-filter: blur(10px);
     width: 90%;
     border-radius: 20px;
-    font-size: 2.5rem;
+    font-size: 1.5rem;
   }
   .form-col2{
       height: 20%;
@@ -340,7 +340,12 @@ input[type="radio"]:checked {
   .col-2-general input,
   .col-2-general select {
       height: 35%;
-      font-size: 2rem;
+      font-size: 1.5rem;
+  }
+  
+  .col-2-general select {
+      padding: 0;
+      padding-left: 2px;
   }
   
   .col-2-general button {
